# CAIW

./: .gitignore  AGENTS.md  README.md  algorithmic_and_ui_spec.md  api_spec.md  architecture_documentation.md  brd.txt  developer_guide.md  packaging_guide.md  spec.txt  start.cmd
backend/: .env.example  alembic.ini  mypy.ini  package.py  requirements.txt  ruff.toml  run.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: catalog.py  designs.py  export.py  import_api.py  intelligence.py  messages.py  models.py  projects.py  settings_api.py  ws.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: database.py  schemas.py
backend/app/services/: comfy_api.py  image_service.py  intelligence_service.py  llm_service.py  orchestrator.py
backend/app/solver/: layout.py
backend/tests/: conftest.py  test_api.py  test_layout_enhanced.py  test_llm_parsing.py  test_orchestrator.py  test_solver.py  test_ws_integration.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.module.css  App.tsx  api.ts  constants.ts  types.ts
frontend/src/components/: CatalogPanel.module.css  CatalogPanel.tsx  ChatPanel.module.css  ChatPanel.tsx  ComfyStatus.module.css  ComfyStatus.tsx  ConnectionStatus.module.css  ConnectionStatus.tsx  DesignEditorPage.module.css  DesignEditorPage.tsx  DesignPreview.module.css  DesignPreview.tsx  DoorMesh.tsx  ErrorBoundary.tsx  EvolutionTimeline.tsx  (+34 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
(+18 files in other folders)
